samples/_failures_safe/1761718283_f65d02_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0ae8db89.c: In function ‘main’:
./samples/SAFE/__tmp_0ae8db89.c:150:16: error: expected ‘;’ at end of input
  150 |     matrix_init
      |                ^
      |                ;
./samples/SAFE/__tmp_0ae8db89.c:150:5: error: expected declaration or statement at end of input
  150 |     matrix_init
      |     ^~~~~~~~~~~
